# cqrs

./: Cargo.toml
src/: aggregate.rs  event.rs  event_store.rs  lib.rs  main.rs
src/domain/: error.rs  events.rs  mod.rs  test.rs
src/rdb/: mod.rs  repository.rs  test.rs
src/repository/: repository.rs  test.rs
src/services/: mod.rs  query.rs  test.rs
