[package]
name = "sourcefulness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruva = {version ="*" , features=["sqlx-postgres"]}
serde = {version="1.0.179",features=["derive"]}
serde_json = "1"
dotenv = "0.15.0"

tokio = { version = "1.35.0", features = [ "macros","sync"] }
sqlx = {version="0.6.3" ,features = ["runtime-tokio-rustls","postgres"],optional=true}