[package]
name = "sourcefulness"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dotenv = "0.15.0"

tokio = { version = "1.48.0", features = ["macros", "sync"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
chrono = "*"
